# Scripts

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
scripts/: actualizaciones.py  audio.py  bateria.py  lista_enlazada.py  main.py  spotify_status.py
scripts/procesos/: comandos.py  rofi.py
tests/: test_actualizaciones.py  test_bateria.py  test_scripts.py
tests/test_procesos/: test_comandos.py  test_rofi.py
