[tool.poetry]
name = "Scripts"
version = "0.1.0"
description = "Scripts de integración de entrono de desarrollo con Bspwm"
authors = ["medicendav <davidtorrezreyes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flakehell = "^0.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.flakehell]
max_line_length = 88
