[tool.poetry]
name = "Scripts"
version = "0.1.0"
description = "Scripts de integración de entrono de desarrollo con Bspwm"
authors = ["medicendav <davidtorrezreyes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flakehell = "^0.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.flakehell]
max_line_length = 88
show-source = true
format = "grouped"

[tool.flakehell.plugins]
# include everything in pyflakes except F401
pyflakes = ["+*", "-F401"]
flake8-bandit = ["-*", "+S1??"]
"flake8-*" = ["+*"]
flake8-docstrings = ["-*"]
